--- a/langpop-web/.classpath
+++ b/langpop-web/.classpath
@@ -4,6 +4,43 @@
   <classpathentry output="target\scala-2.9.2\test-classes" path="src\test\scala" kind="src"></classpathentry>
   <classpathentry output="target\scala-2.9.2\test-classes" path="src\test\java" kind="src"></classpathentry>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.scalatra\scalatra\jars\scalatra-2.1.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.clapper\grizzled-slf4j_2.9.2\jars\grizzled-slf4j_2.9.2-0.6.9.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.slf4j\slf4j-api\jars\slf4j-api-1.6.4.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\io.backchat.rl\rl_2.9.2\jars\rl_2.9.2-0.3.2.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.scalatra\scalatra-scalate\jars\scalatra-scalate-2.1.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.fusesource.scalate\scalate-core\bundles\scalate-core-1.5.3.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.fusesource.scalate\scalate-util\bundles\scalate-util-1.5.3.jar" kind="lib"></classpathentry>
+  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty.orbit\javax.servlet\jars\javax.servlet-3.0.0.v201112011016.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\ch.qos.logback\logback-classic\jars\logback-classic-1.0.6.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\ch.qos.logback\logback-core\jars\logback-core-1.0.6.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.slf4j\slf4j-api\jars\slf4j-api-1.6.5.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.scalatra\scalatra-specs2\jars\scalatra-specs2-2.1.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.scalatra\scalatra-test\jars\scalatra-test-2.1.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\test-jetty-servlet\jars\test-jetty-servlet-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-webapp\jars\jetty-webapp-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-xml\jars\jetty-xml-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-util\jars\jetty-util-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-servlet\jars\jetty-servlet-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-security\jars\jetty-security-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-server\jars\jetty-server-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-continuation\jars\jetty-continuation-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-http\jars\jetty-http-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.eclipse.jetty\jetty-io\jars\jetty-io-8.1.3.v20120416.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.mockito\mockito-all\jars\mockito-all-1.8.5.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.apache.commons\commons-lang3\jars\commons-lang3-3.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.apache.httpcomponents\httpclient\jars\httpclient-4.2.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.apache.httpcomponents\httpcore\jars\httpcore-4.2.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\commons-logging\commons-logging\jars\commons-logging-1.1.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\commons-codec\commons-codec\jars\commons-codec-1.6.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.apache.httpcomponents\httpmime\jars\httpmime-4.2.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.specs2\specs2_2.9.2\jars\specs2_2.9.2-1.12.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.specs2\specs2-scalaz-core_2.9.2\jars\specs2-scalaz-core_2.9.2-6.0.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.scalatra\scalatra-scalatest\jars\scalatra-scalatest-2.1.1.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.scalatest\scalatest_2.9.2\jars\scalatest_2.9.2-1.8.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\junit\junit\jars\junit-4.10.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\org.hamcrest\hamcrest-core\jars\hamcrest-core-1.1.jar" kind="lib"></classpathentry>
   <classpathentry exported="true" path="/langpop-query" kind="src" combineaccessrules="false"></classpathentry>
   <classpathentry exported="true" path="/langpop-query-github" kind="src" combineaccessrules="false"></classpathentry>
   <classpathentry exported="true" path="/langpop-query-stackoverflow" kind="src" combineaccessrules="false"></classpathentry>
