--- a/langpop-web/.classpath
+++ b/langpop-web/.classpath
@@ -4,6 +4,8 @@
   <classpathentry output="target\scala-2.9.2\test-classes" path="src\test\scala" kind="src"></classpathentry>
   <classpathentry output="target\scala-2.9.2\test-classes" path="src\test\java" kind="src"></classpathentry>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\com.typesafe.akka\akka-actor\jars\akka-actor-2.0.3.jar" kind="lib"></classpathentry>
+  <classpathentry path="C:\Users\maarten\.ivy2\cache\com.typesafe\config\bundles\config-0.3.1.jar" kind="lib"></classpathentry>
   <classpathentry path="C:\Users\maarten\.ivy2\cache\org.scalatra\scalatra\jars\scalatra-2.1.1.jar" kind="lib"></classpathentry>
   <classpathentry path="C:\Users\maarten\.ivy2\cache\org.clapper\grizzled-slf4j_2.9.2\jars\grizzled-slf4j_2.9.2-0.6.9.jar" kind="lib"></classpathentry>
   <classpathentry path="C:\Users\maarten\.ivy2\cache\org.slf4j\slf4j-api\jars\slf4j-api-1.6.4.jar" kind="lib"></classpathentry>
