tried to add some logging

--- a/langpop-aggregate/src/test/resources/reference.conf
+++ b/langpop-aggregate/src/test/resources/reference.conf
@@ -1,7 +1,13 @@
 langpop-aggregate {
-	akka.loglevel = DEBUG
-	akka.actor.debug {
-		receive = on
-		lifecycle = on
+	akka {
+		event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+		loglevel = DEBUG
+		log-config-on-start = on
+		actor.debug {
+			receive = on
+			autoreceive = on
+			lifecycle = on
+			event-stream = on
+		}
 	}
 }
