configuration for file logging fixed. almost.

--- a/langpop-aggregate/src/main/resources/reference.conf
+++ b/langpop-aggregate/src/main/resources/reference.conf
@@ -1,14 +1,15 @@
+akka.log-config-on-start = on
+
 langpop-aggregate {
 	akka {
-	event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-	loglevel = DEBUG
-		log-config-on-start = on
+		event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+		loglevel = DEBUG
+		log-config-on-start = off
 		actor.debug {
 			receive = on
 			autoreceive = on
 			lifecycle = on
 			event-stream = on
 		}
-		
 	}
 }
