--- a/langpop-aggregate/src/test/resources/reference.conf
+++ b/langpop-aggregate/src/test/resources/reference.conf
@@ -1,8 +1,10 @@
+akka.log-config-on-start = on
+
 langpop-aggregate {
 	akka {
 		event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
 		loglevel = DEBUG
-		log-config-on-start = on
+		log-config-on-start = off
 		actor.debug {
 			receive = on
 			autoreceive = on
