--- a/langpop-aggregate/src/main/resources/reference.conf
+++ b/langpop-aggregate/src/main/resources/reference.conf
@@ -1,15 +1,6 @@
-akka.log-config-on-start = on
-
-langpop-aggregate {
-	akka {
-		event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-		loglevel = DEBUG
-		log-config-on-start = off
-		actor.debug {
-			receive = on
-			autoreceive = on
-			lifecycle = on
-			event-stream = on
-		}
+langpop {
+	aggregate {
+		tagsfile = "/tags.txt"
+		startdate = "2012-10-31"
 	}
 }
