--- a/langpop-aggregate/src/main/resources/reference.conf
+++ b/langpop-aggregate/src/main/resources/reference.conf
@@ -1,6 +1,8 @@
 langpop {
 	aggregate {
+		#file is read from classpath
 		tagsfile = "/tags.txt"
-		startdate = "2012-10-31"
+		#unix time stamp
+		starttime = 1352645326
 	}
 }
