--- a/langpop-aggregate/src/test/resources/application.conf
+++ b/langpop-aggregate/src/test/resources/application.conf
@@ -1,6 +1,30 @@
-langpop {
-	aggregate {
-		tagsfile = "/test-tags.txt"
-		startdate = "2012-11-05"
+test {
+	langpop {
+		aggregate {
+			tagsfile = "/test-tags.txt"
+			starttime = 1352649165
+		}
+	}
+}
+
+akka {
+	event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+	loglevel = DEBUG
+	log-config-on-start = off
+	actor.debug {
+		receive = on
+		autoreceive = on
+		lifecycle = on
+		event-stream = on
+	}
+}
+
+# AggregatorImpl needs this
+langpop-aggregate {
+	langpop {
+		aggregate {
+			tagsfile = "/test-tags.txt"
+			starttime = 1352649165
+		}
 	}
 }
