rewrote all query models to support timestamps and virtual time frames

--- a/langpop-web/src/test/resources/application.conf
+++ b/langpop-web/src/test/resources/application.conf
@@ -13,3 +13,11 @@ langpop-aggregate {
 		}
 	}
 }
+langpop-aggregate {
+	langpop {
+		aggregate {
+			tagsfile = "/test-tags.txt"
+			starttime = 1352649165
+		}
+	}
+}
