extracting events works theoretically

--- a/langpop-query/src/main/resources/reference.conf
+++ b/langpop-query/src/main/resources/reference.conf
@@ -4,6 +4,7 @@ langpop {
 			eventQueryInterval = 60
 			filters {
 				event = "!9hnGt*H(i" # this filter includes all .wrapper fields
+				revisions = "!1znL4Pd(a2b18RqX*Wqsy" # this filter includes all .wrapper fields, and only relevant revision fields
 			}
 		}
 	}
