--- a/langpop-web/src/main/resources/application.conf.sample
+++ b/langpop-web/src/main/resources/application.conf.sample
@@ -51,6 +51,7 @@ langpop-query {
 				eventQueryInterval = 60
 				filters {
 					event = "!9hnGt*H(i" # this filter includes all .wrapper fields
+					revisions = "!1znL4Pd(a2b18RqX*Wqsy" # this filter includes all .wrapper fields, and only relevant revision fields
 				}
 			}
 		}
